# target-mssql

./: README.md  pyproject.toml
target_mssql/: __init__.py  __main__.py  json.py  sinks.py  target.py
tests/: test_core.py
