[tool.poetry]
name = "target-mssql"
version = "0.0.1"
description = "`target-mssql` is a Singer target for mssql, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Dan Norman"]
keywords = [
    "ELT",
    "mssql",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.19.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
pyodbc = "^4.0.35"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
black = "^23.1.0"
pydocstyle = "^6.3.0"
mypy = "^1.0.0"
isort = "^5.11.5"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_mssql"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-mssql = 'target_mssql.target:Targetmssql.cli'
