[project]
name = "target-mssql"
version = "0.1.0"
description = "`target-mssql` is a Singer target for mssql, built with the Meltano Singer SDK."
authors = [{ name = "Dan Norman", email = "buzzcutnorman@gmail.com" }]
keywords = [
    "ELT",
    "mssql",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
dependencies = [
    "singer-sdk~=0.39.0",
    "pyodbc>=5.1.0,<6",
    "pymssql>=2.3.0,<3",
    "msgspec>=0.18.6,<0.19",
]

[project.optional-dependencies]
s3 = ["fs-s3fs>=1.1.1,<2"]

[project.scripts]
target-mssql = "target_mssql.target:Targetmssql.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
src = ["target_mssql"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_mssql"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
